--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="SolSand Mint Official Launch"
-      content="SolSand Mint Official Launch"
+      name="Happy Super SOL Sunday"
+      content="Super Sol Coin Flip"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SolSand Mint Official Launch</title>
+    <title>HAPPY Super SOL Sunday</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
