--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="Happy Super SOL Sunday"
       content="Super Sol Squares"
